--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-moment": "^0.1.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.0.5"
