Updated api service, keys and credentials

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VUE_APP_API=http://api.sportradar.us/
-VUE_APP_NHL_KEY=55u296r82tccvpkzfaa6ss75
-VUE_APP_NFL_KEY=4xv2efka5rsmx6rf8j9w5mja
-VUE_APP_MLB_KEY=hv9hqddt49zdcfnq6nw8ncsb
+VUE_APP_API=https://api.mysportsfeeds.com/v2.0/pull
+VUE_APP_API_USER=0f78f287-1210-4b7c-b6e1-4f0c57
+VUE_APP_API_PASS=MYSPORTSFEEDS
